# gStar4D

./: CMakeLists.txt  Readme.md
GDelaunay/: CMakeLists.txt
GDelaunay/Common/: Config.h
GDelaunay/Main/: Application.cpp  Application.h  Main.cpp
